NProjects/NVisionInspect/vision/NVisionInspectProcessor/header/NVisionInspectProcessorCSharp.h

	/************************** Camera **************************/

	__declspec(dllexport) bool                          ContinuousGrab(CNVisionInspectProcessor* pProcessor,emCameraBrand camBrand, int nCamIdx);
												        
	__declspec(dllexport) bool                          StopGrab(CNVisionInspectProcessor* pProcessor,emCameraBrand camBrand, int nCamIdx);
												        
	__declspec(dllexport) BYTE*                         GetImageBuffer(CNVisionInspectProcessor* pProcessor,emCameraBrand camBrand, int nCamIdx);
												        
	__declspec(dllexport) bool                          SetTriggerMode(CNVisionInspectProcessor* pProcessor, int nCamIdx, int nMode);
												        
	__declspec(dllexport) bool                          SetTriggerSource(CNVisionInspectProcessor* pProcessor, int nCamIdx, int nSource);
												        
	__declspec(dllexport) bool                          GetInspectionResult(CNVisionInspectProcessor* pProcessor,  CNVisionInspectResult* pNVisionInsppResult);
	__declspec(dllexport) bool                          GetInspectToolResult_FakeCam(CNVisionInspectProcessor* pProcessor, CNVisionInspectResult_FakeCam* pNVisionInsppRes_FakeCam);
	/************************** Callback **************************/

	__declspec(dllexport) void			                RegCallBackInspectCompleteFunc(CNVisionInspectProcessor* pProcessor, CallbackInspectComplete* pFunc);
												        
	__declspec(dllexport) void			                RegCallBackLogFunc(CNVisionInspectProcessor* pProcessor, CallbackLogFunc* pFunc);
												        
	__declspec(dllexport) void			                RegCallBackAlarmFunc(CNVisionInspectProcessor* pProcessor, CallbackAlarmFunc* pFunc);
												        
	__declspec(dllexport) void			                RegCallBackLocatorTrainCompleteFunc(CNVisionInspectProcessor* pProcessor, CallbackLocatorTrainComplete* pFunc);
	__declspec(dllexport) void			                RegCallbackInspComplete_FakeCamFunc(CNVisionInspectProcessor* pProcessor, CallbackInspectComplete_FakeCam* pFunc);
	__declspec(dllexport) void                          RegCallbackHSVTrainCompleteFunc(CNVisionInspectProcessor* pProcessor, CallbackHSVTrainComplete* pFunc);
	__declspec(dllexport) bool                          SaveRecipe_FakeCam(CNVisionInspectProcessor* pProcessor, CNVisionInspectRecipe_FakeCam* pRecipeFakeCam);