NProjects/NVisionInspect/gui/NVisionInspectGUI/Manager/Class/NVisionInspectProcessorDll.cs


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool SaveRecipe_FakeCam(IntPtr NVisionInspectProcessor, IntPtr pRecipeFakeCam);
        public bool SaveRecipe_FakeCam(ref CNVisionInspectRecipe_FakeCam pRecipeFakeCam)
        {
            IntPtr pPointer = Marshal.AllocHGlobal(Marshal.SizeOf(pRecipeFakeCam));
            Marshal.StructureToPtr(pRecipeFakeCam, pPointer, false);
            bool bRet = SaveRecipe_FakeCam(m_NVisionInspectProcessor, pPointer);

            return bRet;
        }
        /**********************************
      - Save Recipe Fake Camera
      - Parameter : Instance Pointer, Recipe Fake Camera Pointer
       **********************************/

        #endregion

        #region Get Results
#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool GetInspectionResult(IntPtr NVisionInspectProcessor, IntPtr InspResults);
        public bool GetInspectionResult(ref CNVisionInspectResult InspResults)
        {
            CNVisionInspectResult inspRes = new CNVisionInspectResult();
            IntPtr pPointer = Marshal.AllocHGlobal(Marshal.SizeOf(inspRes));
            Marshal.StructureToPtr(inspRes, pPointer, false);
            bool bRet = GetInspectionResult(m_NVisionInspectProcessor, pPointer);
            InspResults = (CNVisionInspectResult)Marshal.PtrToStructure(pPointer, typeof(CNVisionInspectResult));

            return bRet;
        }
        /**********************************
      - Get Inspection Result
      - Parameter : Instance Pointer, Inspection Result Pointer
       **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool GetInspectToolResult_FakeCam(IntPtr NVisionInspectProcessor, IntPtr pInspRes_FakeCam);
        public bool GetInspectToolResult_FakeCam(ref CNVisionInspectResult_FakeCam inspResult_FakeCam)
        {
            CNVisionInspectResult_FakeCam inspRes = new CNVisionInspectResult_FakeCam();
            IntPtr pPointer = Marshal.AllocHGlobal(Marshal.SizeOf(inspRes));
            Marshal.StructureToPtr(inspRes, pPointer, false);
            bool bRet = GetInspectToolResult_FakeCam(m_NVisionInspectProcessor, pPointer);
            inspResult_FakeCam = (CNVisionInspectResult_FakeCam)Marshal.PtrToStructure(pPointer, typeof(CNVisionInspectResult_FakeCam));

            return bRet;
        }
        /**********************************
      - Get Inspect Tool Result Fake Cam
      - Parameter : Instance Pointer, Inspect Result Fake Camera
       **********************************/

        #endregion

        #region Callback
#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        private static extern void RegCallBackAlarmFunc(IntPtr pInstance, [MarshalAs(UnmanagedType.FunctionPtr)] CallbackAlarmFunc callbackPointer);
        public void RegCallBackAlarmFunc([MarshalAs(UnmanagedType.FunctionPtr)] CallbackAlarmFunc callbackPointer)
        {
            m_RegAlarmCallback = callbackPointer;

            RegCallBackAlarmFunc(m_NVisionInspectProcessor, m_RegAlarmCallback);
        }
        /**********************************
       - Register Alarm Message CallBack
       - Parameter : CallBack Func Pointer
      **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        private static extern void RegCallBackLogFunc(IntPtr pInstance, [MarshalAs(UnmanagedType.FunctionPtr)] CallbackLogFunc callbackPointer);
        public void RegCallBackLogFunc([MarshalAs(UnmanagedType.FunctionPtr)] CallbackLogFunc callbackPointer)
        {
            m_RegLogCallback = callbackPointer;

            RegCallBackLogFunc(m_NVisionInspectProcessor, m_RegLogCallback);
        }
        /**********************************
         - Register System Message CallBack
         - Parameter : CallBack Func Pointer
        **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        private static extern void RegCallBackInspectCompleteFunc(IntPtr NVisionInspectProcessor, [MarshalAs(UnmanagedType.FunctionPtr)] CallbackInsCompleteFunc callbackPointer);
        public void RegCallBackInspectCompleteFunc([MarshalAs(UnmanagedType.FunctionPtr)] CallbackInsCompleteFunc callbackPointer)
        {
            m_RegInsCompleteCallback = callbackPointer;

            RegCallBackInspectCompleteFunc(m_NVisionInspectProcessor, m_RegInsCompleteCallback);
        }
        /**********************************
         - Register Inspection Complete CallBack
         - Parameter : CallBack Func Pointer
        **********************************/

#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        private static extern void RegCallBackLocatorTrainCompleteFunc(IntPtr NVisionInspectProcessor, [MarshalAs(UnmanagedType.FunctionPtr)] CallbackLocatorTrainCompleteFunc callbackPointer);
        public void RegCallBackLocatorTrainCompleteFunc([MarshalAs(UnmanagedType.FunctionPtr)] CallbackLocatorTrainCompleteFunc callbackPointer)
        {
            m_RegLocatorTrainCompleteCallback = callbackPointer;

            RegCallBackLocatorTrainCompleteFunc(m_NVisionInspectProcessor, m_RegLocatorTrainCompleteCallback);
        }
        /**********************************
         - Register Locator Trained CallBack
         - Parameter : CallBack Func Pointer
        **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        private static extern void RegCallbackInspComplete_FakeCamFunc(IntPtr NVisionInspectProcessor, [MarshalAs(UnmanagedType.FunctionPtr)] CallbackInsComplete_FakeCamFunc callbackPointer);
        public void RegCallbackInspComplete_FakeCamFunc([MarshalAs(UnmanagedType.FunctionPtr)] CallbackInsComplete_FakeCamFunc callbackPointer)
        {
            m_RegInsComplete_FakeCamCallback = callbackPointer;

            RegCallbackInspComplete_FakeCamFunc(m_NVisionInspectProcessor, m_RegInsComplete_FakeCamCallback);
        }
        /**********************************
         - Register Inspect Tool Fake Cam CallBack
         - Parameter : CallBack Func Pointer
        **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        private static extern void RegCallbackHSVTrainCompleteFunc(IntPtr NVisionInspectProcessor, [MarshalAs(UnmanagedType.FunctionPtr)] CallbackHSVTrainCompleteFunc callbackPointer);
        public void RegCallbackHSVTrainCompleteFunc([MarshalAs(UnmanagedType.FunctionPtr)] CallbackHSVTrainCompleteFunc callbackPointer)
        {
            m_RegHsvCompleteCallback = callbackPointer;

            RegCallbackHSVTrainCompleteFunc(m_NVisionInspectProcessor, m_RegHsvCompleteCallback);
        }
        /**********************************
         - Register HSV Train Complete CallBack
         - Parameter : CallBack Func Pointer
        **********************************/
        #endregion

        #region Camera

#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool ContinuousGrab(IntPtr NVisionInspectProcessor, int nCamBrand, int nCamIdx);
        public bool ContinuousGrab(int nCamBrand, int nCamIdx) { return ContinuousGrab(m_NVisionInspectProcessor, nCamBrand, nCamIdx); }
        /**********************************
      - Continuous Grab
      - Parameter : Instance Pointer, Camera Brand, Camera Index
       **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool StopGrab(IntPtr NVisionInspectProcessor, int nCamBrand, int nCamIdx);
        public bool StopGrab(int nCamBrand, int nCamIdx) { return StopGrab(m_NVisionInspectProcessor, nCamBrand, nCamIdx); }
        /**********************************
     - Stop Grab
     - Parameter : Instance Pointer, Camera Brand, Camera Index
      **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static IntPtr GetImageBuffer(IntPtr NVisionInspectProcessor, int nCamBrand, int nCamIdx);
        public IntPtr GetImageBuffer(int nCamBrand, int nCamIdx) { return GetImageBuffer(m_NVisionInspectProcessor, nCamBrand, nCamIdx); }
        /**********************************
     - Get Image Buffer
     - Parameter : Instance Pointer, Camera Brand, Camera Index
      **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool SetTriggerMode(IntPtr NVisionInspectProcessor, int nCamIdx, int nMode);
        public bool SetTriggerMode(int nCamIdx, int nMode) { return SetTriggerMode(m_NVisionInspectProcessor, nCamIdx, nMode); }
        /**********************************
     - Set Trigger Mode
     - Parameter : Instance Pointer, Camera Index, Mode Index
      **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool SetTriggerSource(IntPtr NVisionInspectProcessor, int nCamIdx, int nSource);
        public bool SetTriggerSource(int nCamIdx, int nSource) { return SetTriggerSource(m_NVisionInspectProcessor, nCamIdx, nSource); }
        /**********************************
    - Set Trigger Source
    - Parameter : Instance Pointer, Camera Index, Source Index
     **********************************/

